plugins {
    id 'java'
    id 'application'
}

group = 'com.example'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'com.example.antivirus.Main'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

dependencies {
    implementation 'org.xerial:sqlite-jdbc:3.53.0.0'
    implementation 'com.formdev:flatlaf:3.7.1'
    implementation 'org.slf4j:slf4j-nop:2.0.17'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--enable-native-access=ALL-UNNAMED']
}


tasks.named('jar') {
    manifest {
        attributes('Main-Class': 'com.example.antivirus.Main')
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
